test/langtools/tools/javac/valhalla/lworld-values/CheckValueFactoryWithReference.out
CheckValueFactoryWithReference.java:9:28: compiler.err.make.default.with.nonvalue
1 error
